2.0.24-alpha:
- Implemented a much better landscape correcting algorithm so that city chunks fit much better with adjacent high mountains or very low ocean chunks
- Vines are now handled in a much more efficient manner. Should avoid the TPS problems people were getting
- Oceans, rivers, and beaches are now recognized in a way that allows modded biomes to work too
- When a highway is generated it will no longer remove leaf blocks and logs above the highway
- When Lost Cities starts for the first time it will generate a config/lostcity_profiles folder containing standard profiles. As long as that folder exists Lost Cities will not do that again. You can alter/copy/remove profiles in that directory and they will be recognized automatically
- New 'saveprofile' command to save the current profile to a file (which you can then copy to config/lostcity_profiles)

2.0.23-alpha:
- Fixed a problem on servers

2.0.22-alpha:
- First port to 1.14.4!

2.0.21:
- Joseph added a more useful error message when invalid parts are configured

2.0.20:
- Fixed water level issue when combining biosphere with drowned cities, thanks to @3TUSK
- New parkChance profile option that allows you to control the chance that a non-building section will be a park section. If you set this to 0 you will only get streets
- wormzjl fixed explosion leaving a crater on water surface in submerged city style
- wormzjl reports: currently when combining sphere with submerged cities, all outside ground appears to be a mixture of grass + sand, creating a lot of block update lag. This temporarily fixes this issue by replacing underwater toppings with gravel

2.0.19:
- The client support (including fog) was accidentally removed

2.0.18:
- Spanish (Argentina) support for the generator names from TBM13
- English (upside-down) support for the generator names from The Fireplace
- Fix a possible crash in case a compact machine is placed in a city sphere (by Thraaawn)