@@ -2,6 +2,7 @@ package mcjty.lostcities.worldgen;
 
 import mcjty.lostcities.config.LostCityProfile;
 import mcjty.lostcities.worldgen.lost.cityassets.WorldStyle;
+import net.minecraft.util.math.BlockPos;
 import net.minecraft.world.IWorld;
 import net.minecraft.world.biome.Biome;
 import net.minecraft.world.dimension.DimensionType;
@@ -30,4 +31,6 @@ public interface IDimensionInfo {
     ChunkHeightmap getHeightmap(int chunkX, int chunkZ);
 
     Biome[] getBiomes(int chunkX, int chunkZ);
+
+    Biome getBiome(BlockPos pos);
 }
